--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: ["https://github.com/HazukiKaguya/Stickers_PlusPlus#%E6%89%93%E8%B5%8F", 打赏]
+custom: ["https://github.com/HazukiKaguya/Stickers_PlusPlus#%E6%89%93%E8%B5%8F"]
