--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: ["https://github.com/HazukiKaguya/Stickers_PlusPlus#%E6%89%93%E8%B5%8F"]
+custom: ["https://github.com/HazukiKaguya/Stickers_PlusPlus#%E8%B5%9E%E5%8A%A9"]
